[package]
name = "idkmng"
version = "1.4.2"
edition = "2021"
repository = "https://github.com/pwnxpl0it/idkmng"
authors = ["Mohamed Tarek @pwnxpl0it"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
toml = "0.5.9"
