[package]
name = "idkmng"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/pwnxpl0it/idkmng"
authors = ["Mohamed Tarek @pwnxpl0it"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="idkmng"
path="src/core/lib.rs"

[[bin]]
name="idkmng"
path="src/cli/main.rs"

[dependencies]
chrono = "0.4.34"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
indexmap = "2.2.6"
promptly = "0.3.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
toml = "0.5.9"
